# Pholos

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  Pholos.sln  README.md  appveyor.yml  generate.bat  premake5.lua
.github/workflows/: cmake.yml  main.yml
Pholos/: Pholos.vcxproj  Pholos.vcxproj.filters
Pholos/include/: application.hpp  common.hpp  constants.hpp  controller.hpp  database.hpp  entertainment.hpp  internal.hpp  movies.hpp  queries.hpp  stats.hpp  tv-show.hpp  user.hpp
Pholos/lib/: sqlite3.lib
Pholos/src/: Application.cpp  Application.hpp  Controller.cpp  Controller.hpp  Movie.cpp  Movie.hpp  Stats.hpp  TvShow.cpp  TvShow.hpp  User.hpp  Utility.cpp  Utility.hpp  application.hpp  common.cpp  constants.hpp  content-base.cpp  content-base.hpp  controller.cpp  controller.hpp  database.cpp  database.hpp  entertainment.cpp  entertainment.hpp  import.hpp  internal.cpp  internal.hpp  main.cpp  movies.cpp  movies.hpp  queries.hpp  tv-show.cpp  tv-show.hpp  type_traits.hpp  user.cpp  utility.hpp
Pholos/src/Controller/: Controller.cpp  Controller.hpp
Pholos/src/Helper/: database.cpp  database.hpp
Pholos/src/Movie/: Movie.cpp  Movie.hpp
Pholos/src/Movies/: movies.cpp  movies.hpp
Pholos/src/TvShow/: TvShow.cpp  TvShow.hpp  tv-show.cpp  tv-show.hpp
Pholos/src/User/: User.cpp  User.hpp
Pholos/src/fmt/: fmt.hpp
Pholos/src/helper/: Controller.cpp  Controller.hpp  Utility.cpp  Utility.hpp
Pholos/src/test/: test.cpp
Pholos/test/: CMakeLists.txt  test_convertion.cpp  test_dummy.cpp
PholosTest/: PholosTest.vcxproj
PholosTest/src/: MovieTest.hpp  test-main.cpp  test-movie.cpp
cmake/: compiler_warnings.cmake  static_analyzers.cmake
